--- a/online-zoo/assets/styles/main_base.scss
+++ b/online-zoo/assets/styles/main_base.scss
@@ -838,14 +838,20 @@ border-image-slice: 1; */
     position: relative;
     height: 919px;
     padding-bottom: 192px;
-    overflow: hidden;
-
+    /* overflow: hidden; */
+   .leav-cover {position: absolute;
+    right:0;
+    bottom:0;
+    width:100%;
+    height:50%;
+    overflow:hidden;
     .bg-leav {
         position: absolute;
         bottom: -132px;
         right: 0px;
         z-index: -1;
     }
+}
 
     .container {
         text-align: center;
@@ -1634,9 +1640,10 @@ border-image-slice: 1; */
             /* gray */
             color: #767474;
         }
-
+}
+@media screen and (max-width:390px) {
     
-
+    .cover-pop-up {left:10px;}
 }
 
 
